feat: add demo of api/v1/biz and update doc format
