# api/v1/api.go
@@ -6,16 +6,7 @@ import (
 )
 
 func bizApi(g *gin.Engine, basePath string) {
-	// The health check handlers
-	bizRouteGroup := g.Group(basePath + "/biz")
-	{
-		bizRouteGroup.POST("/modelBiz", biz.PostJsonModelBiz)
-		bizRouteGroup.GET("/string", biz.GetString)
-		bizRouteGroup.GET("/json", biz.GetJSON)
-		bizRouteGroup.GET("/path/:some_id", biz.GetPath)
-		bizRouteGroup.GET("/query", biz.GetQuery)
 
-		// form
-		// bizRouteGroup.GET("/form", biz.PostForm)
-	}
+	biz.Router(g, basePath)
+	// TODO sinlov 2023/6/20 other router group at here
 }
