# api/v1/handler/biz/bizBase.go
@@ -4,22 +4,23 @@ import (
 	"github.com/bridgewwater/gin-api-swagger-temple/api/v1/errdef"
 	"github.com/bridgewwater/gin-api-swagger-temple/api/v1/handler"
 	"github.com/bridgewwater/gin-api-swagger-temple/api/v1/model/biz"
-	"net/http"
-	"strconv"
-
 	"github.com/gin-gonic/gin"
+	"net/http"
 )
 
 // GetPath
-// @Summary /biz/path
-// @Description warning api in prod will hide, abs remote api for dev
-// @Tags biz
-// @Accept application/json
-// @Produce application/json
-// @Param    some_id    path    string    true    "some id to show"
-// @Success    200    {object}    biz.Biz    "value in biz.Biz"
-// @Failure    400    {object}    errdef.Err    "error at errdef.Err"
-// @Router /biz/path/{some_id} [get]
+//
+//	@Summary		api path demo for route path
+//	@Description	warning api in prod will hide, abs remote api for dev
+//	@Tags			biz
+//	@Accept			multipart/form-data
+//	@Produce		json
+//
+//	@Param			some_id		path		string			true	"some id to show"
+//
+//	@Success		200			{object}	biz.Biz			"value in biz.Biz"
+//	@Failure		400			{object}	errdef.Err		"error at errdef.Err"
+//	@Router			/biz/path/{some_id}						[get]
 func GetPath(c *gin.Context) {
 	id := c.Param("some_id")
 	if id == "" {
@@ -33,33 +34,24 @@ func GetPath(c *gin.Context) {
 }
 
 // GetQuery
-// @Summary /biz/query
-// @Description warning api in prod will hide, abs remote api for dev
-// @Tags biz
-// @Accept application/json
-// @Produce application/json
-// @Param    offset    query    int    true    "Offset"
-// @Param    limit    query    int    false    "limit"
-// @Success    200    {object}    biz.Biz    "value in biz.Biz"
-// @Failure    400    {object}    errdef.Err    "error at errdef.Err"
-// @Router /biz/query/ [get]
+//
+//	@Summary		api demo for query.
+//	@Description	warning api in prod will hide, abs remote api for dev
+//	@Tags			biz
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			offset		query		int				true	"Offset"
+//	@Param			limit		query		int				false	"limit"
+//
+//	@Success		200			{object}	biz.Biz			"value in biz.Biz"
+//	@Failure		400			{object}	errdef.Err		"error at errdef.Err"
+//	@Router			/biz/query/								[get]
 func GetQuery(c *gin.Context) {
-	offsetStr := c.Query("offset")
-	offset, err := strconv.Atoi(offsetStr)
+	offset, limit, err := handler.ParseQueryCommonOffsetAndLimit(c)
 	if err != nil {
-		handler.JsonErrDefErr(c, errdef.ErrParams, err, "offset error")
+		handler.JsonErrDefErr(c, errdef.ErrParams, err)
 		return
-	}
-	limitStr := c.Query("limit")
-	var limit int
-	if limitStr != "" {
-		limit, err = strconv.Atoi(limitStr)
-		if err != nil {
-			handler.JsonErrDefErr(c, errdef.ErrParams, err, "limit error")
-			return
-		}
-	} else {
-		limit = 10
 	}
 	resp := biz.Biz{
 		Offset: offset,
@@ -69,12 +61,16 @@ func GetQuery(c *gin.Context) {
 }
 
 // GetString
-// @Summary /biz/string
-// @Description get string of this api.
-// @Tags biz
-// @Success    200    "OK"
-// @Failure    500
-// @Router /biz/string [get]
+//
+//	@Summary		sample demo string
+//	@Description	get string of this api. warning api in prod will hide, abs remote api for dev
+//	@Tags			biz
+//	@Accept			json
+//	@Produce		plain
+//
+//	@Success		200										"OK"
+//	@Failure		500										""
+//	@Router			/biz/string								[get]
 func GetString(c *gin.Context) {
 	message := "this is biz message"
 	c.String(http.StatusOK, message)
